# GoogleTestWithCmake

./: .gitignore  CMakeLists.txt  README.md
main-project/: CMakeLists.txt  main.cpp  main.h
sqr/: sqr.cpp
src/: main.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  test.cpp
